# keyword-spotting

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  environment.yaml  features_saver.py  inference.py  input_data.py  live_inference.py  main.py  pyproject.toml  requirements.txt  setup.py  speech_features.py  test.py  train.py
.github/workflows/: python-black.yaml
configs/: parameters.yaml  speech_commands_parameters.yaml
data/: config.yaml
keyword_spotting/features/: features_saver.py
keyword_spotting/inference/: inference.py  inference_local.py
keyword_spotting/models/: dnn_models.py
keyword_spotting/train/: train.py
keyword_spotting/utils/: dataloaders.py
kws/: __init__.py  settings.py
kws/common/: __init__.py  config.py  errors.py  types.py
kws/data/: speech_commands.py
kws/datasets/: __init__.py  speech_commands.py  torch_speech_commands.py
kws/features/: features_saver.py  speech_features.py
kws/inference/: inference.py  inference_local.py
kws/libs/: audio_processor.py  data_loader.py  dataloader.py  models.py  signal_handler.py  signal_processings.py  training.py
kws/libs/speech_features/: __init__.py  base.py  sigproc.py
kws/train/: test.py  train.py
kws/utils/: config.py  dataloaders.py  input_data.py  loader.py  mic_test.py
models/: dnn_models.py  models.py
tests/kws/libs/speech_features/: test_sigproc.py
tests/kws/utils/: test_loader.py
utils/: audio_utils.py  config.py  dataloaders.py  dataset.py  input_data.py
