[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  tests/data
  | profiling
)/
'''
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
preview = true

# Build system information and other project-specific configuration below.
# NOTE: You don't need this in your own Black configuration.

[tool.poetry]
name = "keyword-spotting"
version = "0.1.0"
description = "as your call"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
